Deletion of unused code.